# nmr_webapps

./: .gitignore  LICENSE  README.md  SUMMARY.md  app.yaml  biradicals_molarmass.csv  dipole_calculator.ipynb  dipole_calculator.py  dnp_sample_prep.py  homepage.py  inadequate_efficiency.py  max_sensitivity_fromt1.py  pyproject.toml  requirement.txt  requirements.in  requirements.txt  returned_sensitivity_twocomp.py  setup.sh  temp_from_KBr.py
.devcontainer/: devcontainer.json
.github/workflows/: static.yml
_pages/: home.py
about-us/: values.md
about-us/vision-mission-and-focus/: README.md  focus.md  (+2 more)
codes/: Biradical_Visualiser.py  Chemical_Shift_Prediction.py  DNP_Sample_Preparation.py  DQ_SQ_predictor.py  Dipole_Calculator.py  INADEQUATE_Efficiency.py  NMR_Nuclei_Parameters.py  Optimum_Recycle_Delay.py  Power_Calculator.py  Sample_Temp_from_KBr_T1.py
collaborating/: how-we-work-together.md  meetings.md
dep/: IsotopeProperties.csv  NMR_freq_table.csv  biradicals_molarmass.csv  biradicals_smiles.csv  csa_amino_acids.csv  smilecodes_biradicals.xlsx  ~$smilecodes_biradicals.xlsx
env/: pyvenv.cfg
molfiles_biradicals/: abu.mol  btbk.mol
pages/: 4_DNP_Sample_Preparation.py  7_Power_Calculator.py  dipole_calculator.py  dnp_sample_prep.py  inadequate_efficiency.py  nmr_properties.py  optimum_sensitivity.py  temp_from_KBr.py
policies/: requesting-time-off.md
src/: dipole_calculator.py  dnp_sample_prep.py  inadequate_efficiency.py  max_sensitivity_fromt1.py  nmr_properties.py  requirements.in  requirements.txt  temp_from_KBr.py
team/: meet-the-team.md
(+2 files in other folders)
