[project]
name = "nmr-webapps"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chembl-structure-pipeline>=1.2.0",
    "ipython-genutils>=0.0.1",
    "lmfit>=1.3.2",
    "matplotlib>=3.10.0",
    "nmrglue>=0.11",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pandas-stubs~=2.3.3",
    "plotly>=6.0.0",
    "polars>=1.25.0",
    "pubchempy>=1.0.4",
    "py3dmol>=2.4.2",
    "rdkit>=2024.9.5",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "scipy-stubs~=1.16.3",
    "stmol>=0.0.9",
    "streamlit>=1.42.0",
    "streamlit-ketcher>=0.0.1",
]
